# blablatest

./: .travis.yml  README.md  database.sql  pyproject.toml
blablatest/: __init__.py  __main__.py  data.py  db.py  models.py
tests/: test_data.py
